--- a/StudentAssistant/src/main/resources/style/spreadsheet.css
+++ b/StudentAssistant/src/main/resources/style/spreadsheet.css
@@ -10,11 +10,12 @@
 }
 
 .spreadsheet-cell.first-cell{
-    -fx-background-color:white;
+    -fx-background-color: white;
     -fx-background-insets: 0, 0 0 0 0;
     -fx-alignment: center;
     -fx-border-color: #BFBFBF;
-    -fx-table-cell-border-color:#BFBFBF;
+    -fx-table-cell-border-color: #BFBFBF;
+    -fx-font-size: 8pt;
 }
 
 .style0{
