--- a/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
+++ b/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
@@ -12,9 +12,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="container" prefHeight="350.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.MainWindowController">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
+
+<AnchorPane fx:id="container" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.MainWindowController">
+   <children>
+    <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <menus>
         <Menu mnemonicParsing="false" text="_File">
           <items>
@@ -27,16 +28,19 @@
             <MenuItem mnemonicParsing="false" onAction="#selectFile" text="Open…">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                     </accelerator></MenuItem>
+                     </accelerator>
+                  </MenuItem>
             <MenuItem mnemonicParsing="false" onAction="#saveAs" text="Save As…">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                     </accelerator></MenuItem>
+                     </accelerator>
+                  </MenuItem>
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" onAction="#loadUNBData" text="Load UNB Data...">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="L" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                     </accelerator></MenuItem>
+                     </accelerator>
+                  </MenuItem>
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" onAction="#quit" text="Quit..." />
           </items>
@@ -48,9 +52,9 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="314.0" prefWidth="575.0">
+    <AnchorPane layoutY="25.0" maxHeight="-1.0" maxWidth="-1.0" prefHeight="494.0" prefWidth="525.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
       <children>
-            <VBox layoutX="370.0" layoutY="27.0" prefHeight="286.0" spacing="10.0">
+            <VBox layoutX="370.0" layoutY="27.0" prefHeight="320.0" prefWidth="130.0" spacing="10.0" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="30.0">
                <children>
                   <Button fx:id="btnAddCourse" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#addCourse" text="Add Course" />
                   <Button fx:id="btnAddSection" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#addSection" text="Add Section" />
@@ -59,8 +63,8 @@
                   <Button fx:id="btnGenSchedule" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onMouseClicked="#genSchedule" text="Generate Schedule" />
                </children>
             </VBox>
-            <Label fx:id="lblCourseList" layoutX="16.0" layoutY="9.0" text="Course List" />
-            <TreeView fx:id="treeCourseList" layoutX="14.0" layoutY="26.0" prefHeight="286.0" prefWidth="338.0">
+            <Label fx:id="lblCourseList" layoutX="16.0" layoutY="9.0" text="Course List" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="10.0" />
+            <TreeView fx:id="treeCourseList" layoutX="14.0" layoutY="26.0" prefHeight="286.0" prefWidth="338.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="30.0">
                <contextMenu>
                   <ContextMenu fx:id="contextMenu">
                     <items>
@@ -73,8 +77,9 @@
                         <MenuItem fx:id="menuDelete" mnemonicParsing="false" onAction="#deleteItem" text="Delete" />
                     </items>
                   </ContextMenu>
-               </contextMenu></TreeView>
+               </contextMenu>
+            </TreeView>
       </children>
     </AnchorPane>
-  </children>
-</VBox>
+   </children>
+</AnchorPane>
