--- a/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
+++ b/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
@@ -46,7 +46,7 @@
         </Menu>
         <Menu mnemonicParsing="false" text="_Help">
           <items>
-            <MenuItem mnemonicParsing="false" text="About Student Schedule Assistant" />
+            <MenuItem mnemonicParsing="false" onAction= '#openDocumentation' text="About Student Schedule Assistant" />
           </items>
         </Menu>
       </menus>
